--- a/huellaProto/huellaProto/Views/HuellaTabbed.xaml
+++ b/huellaProto/huellaProto/Views/HuellaTabbed.xaml
@@ -1,15 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:tabs="clr-namespace:huellaProto.Views"
-             x:Class="huellaProto.Views.HuellaTabbed"
-             Title="Calculadora"
-             BarBackgroundColor="#61edb9">
-  <!--Pages can be added as references or inline-->
+<TabbedPage
+    x:Class="huellaProto.Views.HuellaTabbed"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:tabs="clr-namespace:huellaProto.Views"
+    Title="Encuesta"
+    BarBackgroundColor="#61edb9">
+    <!--  Pages can be added as references or inline  -->
     <TabbedPage.Children>
-        <tabs:Trasnporte/>
-        <tabs:Maquinas/>
-        <tabs:ResiduosPage/>
-        <tabs:Energia/>
+        <tabs:Trasnporte />
+        <!--<tabs:Maquinas IsVisible="False" />
+        <tabs:ResiduosPage />
+        <tabs:Energia />-->
     </TabbedPage.Children>
 </TabbedPage>
