--- a/huellaProto/huellaProto/Views/Maquinas.xaml
+++ b/huellaProto/huellaProto/Views/Maquinas.xaml
@@ -1,13 +1,125 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="huellaProto.Views.Maquinas"
-             Title="Máquinas">
+<ContentPage
+    x:Class="huellaProto.Views.Maquinas"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    Title="Máquinas"
+    BindingContext="{Binding Main, Source={StaticResource Locator}}">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <ScrollView BindingContext="{Binding Tabs}">
+
+            <StackLayout Padding="10" VerticalOptions="FillAndExpand">
+                <StackLayout IsVisible="{Binding IsVisiblePregMaquina, Mode=TwoWay}" VerticalOptions="FillAndExpand">
+                    <Label
+                        Margin="30,10,30,10"
+                        FontSize="Large"
+                        HorizontalOptions="CenterAndExpand"
+                        Text="¿La institución cuenta con máquinas o equipos que utilicen combustibles líquidos?"
+                        VerticalOptions="CenterAndExpand"
+                        XAlign="Center" />
+
+                    <StackLayout Orientation="Horizontal">
+                        <Button
+                            BackgroundColor="#61edb9"
+                            BorderRadius="23"
+                            Command="{Binding MaquinasCommand}"
+                            HeightRequest="46"
+                            HorizontalOptions="CenterAndExpand"
+                            IsEnabled="{Binding Isnabled, Mode=TwoWay}"
+                            Text="SI"
+                            TextColor="White"
+                            WidthRequest="100" />
+                        <Button
+                            BackgroundColor="#61edb9"
+                            BorderRadius="23"
+                            Command="{Binding OmitirMaquinaCommand}"
+                            HeightRequest="46"
+                            HorizontalOptions="CenterAndExpand"
+                            IsEnabled="{Binding Isnabled, Mode=TwoWay}"
+                            Text="NO"
+                            TextColor="White"
+                            WidthRequest="100" />
+                    </StackLayout>
+                </StackLayout>
+                <StackLayout IsVisible="{Binding IsVisibleFormMaquina, Mode=TwoWay}">
+                    <Image
+                        HorizontalOptions="CenterAndExpand"
+                        Source="huella_icon"
+                        WidthRequest="100" />
+                    <StackLayout
+                        Margin="0,10,0,0"
+                        Orientation="Vertical"
+                        VerticalOptions="CenterAndExpand">
+                        <Label Text="¿Con cuántas máquinas o equipos que utilicen combustibles líquidos cuenta la institución?" XAlign="Center" />
+                        <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                        </StackLayout>
+                    </StackLayout>
+                    <StackLayout
+                        Margin="0,15,0,0"
+                        Orientation="Vertical"
+                        VerticalOptions="CenterAndExpand">
+                        <Label
+                            Margin="3"
+                            Text="¿Cuantas de los maquinas utilizan gasolina? "
+                            XAlign="Center" />
+                        <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                        </StackLayout>
+                    </StackLayout>
+                    <StackLayout
+                        Margin="0,15,0,0"
+                        Orientation="Vertical"
+                        VerticalOptions="CenterAndExpand">
+                        <Label
+                            Margin="3"
+                            Text="¿Cuantas de los maquinas utilizan diesel?"
+                            XAlign="Center" />
+                        <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                        </StackLayout>
+                    </StackLayout>
+                    <StackLayout
+                        Margin="0,15,0,0"
+                        Orientation="Vertical"
+                        VerticalOptions="CenterAndExpand">
+                        <Label
+                            Margin="3"
+                            Text="¿Cuantas de los maquinas utilizan gas natural?"
+                            XAlign="Center" />
+                        <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
+                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                        </StackLayout>
+                    </StackLayout>
+                    <StackLayout
+                        Margin="0,15,0,0"
+                        Orientation="Horizontal"
+                        VerticalOptions="EndAndExpand">
+                        <Button
+                            BackgroundColor="#61edb9"
+                            BorderRadius="23"
+                            Command="{Binding OmitirMaquinaCommand}"
+                            HeightRequest="46"
+                            HorizontalOptions="CenterAndExpand"
+                            IsEnabled="{Binding Isnabled, Mode=TwoWay}"
+                            Text="Calcular"
+                            TextColor="White"
+                            WidthRequest="200" />
+
+                    </StackLayout>
+                    <!--<StackLayout HorizontalOptions="CenterAndExpand" Orientation="Horizontal">
+                        <Image Source="logos_sena" WidthRequest="130" />
+
+                    </StackLayout>-->
+                    <!--<StackLayout VerticalOptions="End">
+                        <Image Margin="-11" Source="fondos_arboles3_icon.png" />
+                    </StackLayout>-->
+                </StackLayout>
+                <StackLayout VerticalOptions="EndAndExpand">
+                    <Image Margin="-11" Source="fondos_arboles3_icon.png" />
+                </StackLayout>
+            </StackLayout>
+
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
