--- a/huellaProto/huellaProto/Views/ResiduosPage.xaml
+++ b/huellaProto/huellaProto/Views/ResiduosPage.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="huellaProto.Views.ResiduosPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
@@ -9,17 +9,37 @@
         <ScrollView BindingContext="{Binding Tabs}">
             <StackLayout Padding="10" VerticalOptions="FillAndExpand">
                 <StackLayout>
-                    <Image
-                        HorizontalOptions="CenterAndExpand"
+                     <Image
+                        Margin="0,0,0,10"
                         Source="huella_icon"
-                        WidthRequest="100" />
+                        VerticalOptions="StartAndExpand">
+                        <Image.WidthRequest>
+                            <OnIdiom
+                                x:TypeArguments="x:Double"
+                                Phone="100.0"
+                                Tablet="240.0" />
+                        </Image.WidthRequest>
+                    </Image>
                     <StackLayout
                         Margin="0,10,0,0"
                         Orientation="Vertical"
                         VerticalOptions="CenterAndExpand">
                         <Label Text="¿Realiza realiza separación de residuos orgánicos e inorgánicos? " XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                            <Entry Keyboard="Numeric">
+                             <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="140.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0"
+                                    Tablet="35.0" />
+                            </Entry.HeightRequest>
+                           </Entry>
                         </StackLayout>
                     </StackLayout>
                     <StackLayout
@@ -31,7 +51,20 @@
                             Text="¿La institución cuenta con programa de reciclaje?"
                             XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                            <Entry Keyboard="Numeric">
+                             <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="140.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0"   
+                                    Tablet="35.0" />
+                            </Entry.HeightRequest>
+                           </Entry>
                         </StackLayout>
                     </StackLayout>
                     <StackLayout
@@ -43,7 +76,20 @@
                             Text="¿La institución realiza compostaje a partir de residuos orgánicos? "
                             XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                            <Entry Keyboard="Numeric">
+                             <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="140.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0"
+                                    Tablet="35.0" />
+                            </Entry.HeightRequest>
+                           </Entry>
                         </StackLayout>
                     </StackLayout>
 
@@ -56,7 +102,20 @@
                             Text="En promedio, ¿Qué cantidad de residuos sólidos generan mensualmente en la institución, teniendo en cuenta todos los residuos? (Toneladas)"
                             XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                            <Entry Keyboard="Numeric">
+                             <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="140.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0"
+                                    Tablet="35.0" />
+                            </Entry.HeightRequest>
+                           </Entry>
                         </StackLayout>
                     </StackLayout>
 
@@ -69,7 +128,20 @@
                             Text="En promedio, ¿Qué cantidad de residuos reciclables se están generando mensualmente en la institución? (Toneladas)   "
                             XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
-                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                            <Entry Keyboard="Numeric">
+                             <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="140.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0"
+                                    Tablet="35.0" />
+                            </Entry.HeightRequest>
+                           </Entry>
                         </StackLayout>
                     </StackLayout>
                     <StackLayout
@@ -79,7 +151,7 @@
                         <Button
                             BackgroundColor="#61edb9"
                             BorderRadius="23"
-                            Command="{Binding OmitirResiduosCommand}"
+                            Command="{Binding ResiduosCommand}"
                             HeightRequest="46"
                             HorizontalOptions="CenterAndExpand"
                             IsEnabled="{Binding Isnabled, Mode=TwoWay}"
