--- a/huellaProto/huellaProto/Views/Trasnporte.xaml
+++ b/huellaProto/huellaProto/Views/Trasnporte.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="huellaProto.Views.Trasnporte"
     xmlns="http://xamarin.com/schemas/2014/forms"
@@ -21,7 +21,7 @@
                     <StackLayout Orientation="Horizontal">
                         <Button
                             BackgroundColor="#61edb9"
-                            BorderRadius="50"
+                            BorderRadius="23"
                             Command="{Binding VehiculosCommand}"
                             HeightRequest="46"
                             HorizontalOptions="CenterAndExpand"
@@ -40,16 +40,19 @@
                             TextColor="White"
                             WidthRequest="100" />
                     </StackLayout>
-                    <StackLayout VerticalOptions="EndAndExpand">
-                        <Image Margin="-11" Source="fondos_arboles3_icon.png" />
-                    </StackLayout>
                 </StackLayout>
                 <StackLayout IsVisible="{Binding IsVisibleForm, Mode=TwoWay}">
                     <Image
-                        HorizontalOptions="CenterAndExpand"
+                        Margin="0,0,0,10"
                         Source="huella_icon"
-                        WidthRequest="100" />
-
+                        VerticalOptions="StartAndExpand">
+                        <Image.WidthRequest>
+                            <OnIdiom
+                                x:TypeArguments="x:Double"
+                                Phone="100.0"
+                                Tablet="240.0" />
+                        </Image.WidthRequest>
+                    </Image>
                     <StackLayout
                         Margin="0,10,0,0"
                         Orientation="Vertical"
@@ -57,7 +60,20 @@
                         <Label Text="¿Con cuántos vehículos cuenta la institución?" XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
                             <Image Source="aeroplane_icon" WidthRequest="20" />
-                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                            <Entry Keyboard="Numeric">
+                             <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="140.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0"    
+                                    Tablet="35.0" />
+                            </Entry.HeightRequest>
+                           </Entry>
                         </StackLayout>
                     </StackLayout>
                     <StackLayout
@@ -70,8 +86,34 @@
                             XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
                             <Image Source="combustible_icon" WidthRequest="15" />
-                            <Entry Keyboard="Numeric" WidthRequest="80" />
-                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                            <Entry Keyboard="Numeric">
+                             <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="140.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0" 
+                                    Tablet="35.0" />
+                            </Entry.HeightRequest>
+                           </Entry>
+                           <Entry Keyboard="Numeric">
+                             <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="140.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0" 
+                                    Tablet="35.0" />
+                            </Entry.HeightRequest>
+                           </Entry>
                             <Label Text="km." VerticalOptions="Center" />
                         </StackLayout>
                     </StackLayout>
@@ -85,12 +127,37 @@
                             XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
                             <Image Source="combustible_icon" WidthRequest="15" />
-                            <Entry Keyboard="Numeric" WidthRequest="80" />
-                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                            <Entry Keyboard="Numeric">
+                             <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="140.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0" 
+                                    Tablet="35.0" />
+                            </Entry.HeightRequest>
+                           </Entry>
+                            <Entry Keyboard="Numeric">
+                             <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="140.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0" 
+                                    Tablet="35.0" />
+                            </Entry.HeightRequest>
+                           </Entry>
                             <Label Text="km." VerticalOptions="Center" />
                         </StackLayout>
                     </StackLayout>
-
                     <StackLayout
                         Margin="0,15,0,0"
                         Orientation="Vertical"
@@ -101,8 +168,34 @@
                             XAlign="Center" />
                         <StackLayout HorizontalOptions="Center" Orientation="Horizontal">
                             <Image Source="combustible_icon" WidthRequest="15" />
-                            <Entry Keyboard="Numeric" WidthRequest="80" />
-                            <Entry Keyboard="Numeric" WidthRequest="80" />
+                            <Entry Keyboard="Numeric">
+                             <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="140.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0" 
+                                    Tablet="35.0" />
+                            </Entry.HeightRequest>
+                           </Entry>
+                            <Entry Keyboard="Numeric">
+                             <Entry.WidthRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="80.0"
+                                    Tablet="140.0" />
+                            </Entry.WidthRequest>
+                                <Entry.HeightRequest>
+                                <OnIdiom
+                                    x:TypeArguments="x:Double"
+                                    Phone="45.0"
+                                    Tablet="35.0" />
+                            </Entry.HeightRequest>
+                           </Entry>
                             <Label Text="km." VerticalOptions="Center" />
                         </StackLayout>
                     </StackLayout>
@@ -126,11 +219,11 @@
                         <Image Source="logos_sena" WidthRequest="130" />
 
                     </StackLayout>-->
-                    <StackLayout VerticalOptions="End">
+                   
+                </StackLayout>
+                 <StackLayout VerticalOptions="EndAndExpand">
                         <Image Margin="-11" Source="fondos_arboles3_icon.png" />
                     </StackLayout>
-                </StackLayout>
-
             </StackLayout>
 
         </ScrollView>
